# youtube_comment_analyzr

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-app-ci.yml
tests/ai/: embeddings_test.py
tests/youtube/: comment_tool_test.py
youtube_comment_analyzr/: main.py
youtube_comment_analyzr/ai/: embeddings.py
youtube_comment_analyzr/ai/graph/: classifier_node.py  extract_comment.py  flow.py  generate_node.py  political_bias_node.py  search_bad_user_node.py  state.py
youtube_comment_analyzr/ai/prompts/: system_prompts.py
youtube_comment_analyzr/youtube/: comment_tool.py
