[tool.poetry]
name = "youtube-comment-analyzr"
version = "0.1.0"
description = ""
authors = ["E1psycongr00 <39326175+E1psycongr00@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.3.0"
langchain-community = "^0.3.0"
langchain-openai = "^0.2.0"
langchain-upstage = "^0.3.0"
google-api-python-client = "^2.146.0"
faiss-cpu = "^1.8.0.post1"
kiwipiepy = "^0.18.1"
rank-bm25 = "^0.2.2"
langchainhub = "^0.1.21"
google-auth-oauthlib = "^1.2.1"
langchain-chroma = "^0.1.4"
protobuf = "3.20"
lark = "^1.2.2"
sentence-transformers = "^3.1.1"
langchain-huggingface = "^0.1.0"
langchain-experimental = "^0.3.2"
langgraph = "^0.2.34"
streamlit = "^1.39.0"


[tool.poetry.group.dev.dependencies]
notebook = "^7.2.2"
ruff = "^0.7.0"

[tool.ruff.lint.per-file-ignores]
"**/*.pyi" = ["F401", "F404"]  

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
